# gtective

./: .env-template  .gitignore  README.md  pyproject.toml  run.py
.nova/: Configuration.json
app/: __init__.py  auth.py  config.yml  spy.py
app/ai/: summarize.py
holmes/: __init__.py  auth.py  config.yml  spy.py
holmes/ai/: __init__.py  summarize.py
